fabrique-derive/tests/ui/missing_referenced_key.stderr
error: Missing `referenced_key` attribute for relation hammer_id
 --> tests/ui/missing_referenced_key.rs:4:1
  |
4 | / struct Anvil {
5 | |     #[fabrique(relation = "Hammer")]
6 | |     hammer_id: u32,
7 | |     weight: u32,
8 | | }
  | |_^
